Adicionando plugin do Sonar